# atm-refraction

./: Cargo.toml
example_configs/: us76.config
src/: environment.rs  lib.rs  line.rs  main.rs  params.rs  path.rs  paths.rs  ray.rs  ray_state.rs
src/air/: atmosphere.rs  function.rs  mod.rs  parser.rs  refractive.rs  us76.rs  vapor.rs
src/air/atmosphere/: mod.rs  parser.rs  pressure_profile.rs  temperature_profile.rs  vertical_profile.rs
src/flat/: line.rs  mod.rs  ray.rs
src/paths/: flat.rs  mod.rs  spherical.rs
src/spherical/: line.rs  ray.rs
