[package]
name = "atm-refraction"
version = "0.3.1"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

description = "Tools for calculating light paths in the atmosphere"

license = "MIT"

documentation = "https://docs.rs/atm-refraction/0.1.0/atm_refraction/"
repository = "https://github.com/fizyk20/atm-refraction.git"

categories = ["science"]

[dependencies]
numeric-algs = "0.2"
nom = "4.1"
regex = "1.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["nom/regexp"]
serialization = ["serde", "serde_derive"]
